--- a/README
+++ b/README
@@ -4,4 +4,6 @@
 
 Slide插件兼容所有现代浏览器，包括ie6，它依赖的YUI的最低版本为3.3.0。 
 
-请访问Slide首页：http://jayli.github.com/gallery/yuislide
+Author: 拔赤/灵玉/虎牙
+
+请访问YUISlide首页：http://jayli.github.com/gallery/yuislide
