--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-这是一个集选项卡切换和幻灯切换功能于一体的小插件，基于YUI3实现，兼容移动终端（iphone/ipad/android），Slide插件配置简单、使用方便，具有良好的可定制性，目前已经运行于淘宝网的很多角落。
+这是一个集选项卡切换和幻灯切换功能于一体的小插件，基于YUI3实现，针对移动终端（iphone/ipad/android）作了优化，动画流畅，并支持触屏事件，Slide插件配置简单、使用方便，具有良好的可定制性，目前已经运行于淘宝网的很多角落。
 
 这个插件最初源自Cubee项目，这个项目是淘宝北京UED团队发起的，基于YUI3开发了许多好用的插件，Slide是比较有代表性的一个，如果你发现插件的bug，可以直接在github上提交，我们会尽快修复。
 
